add authentication in controller and external tests
