# controller/transferController.js
@@ -1,10 +1,13 @@
+
 const express = require('express');
 const router = express.Router();
 const transferService = require('../service/transferService');
+const authenticateToken = require('../middleware/auth');
 
-router.post('/', (req, res) => {
+router.post('/', authenticateToken, (req, res) => {
   try {
-    const { from, to, amount } = req.body;
+    const from = req.user && req.user.username;
+    const { to, amount } = req.body;
     if (!from || !to || typeof amount !== 'number') {
       return res.status(400).json({ error: 'Informe remetente, destinatário e valor.' });
     }
@@ -16,7 +19,7 @@ router.post('/', (req, res) => {
   }
 });
 
-router.get('/', (req, res) => {
+router.get('/', authenticateToken, (req, res) => {
   res.json(transferService.getAllTransfers());
 });
 
