# swagger.json
@@ -5,6 +5,16 @@
     "version": "1.0.0",
     "description": "API para registro, login, consulta de usuários e transferências."
   },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "security": [],
   "paths": {
     "/api/users/register": {
       "post": {
@@ -68,6 +78,7 @@
     "/api/transfers": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -91,6 +102,7 @@
       },
       "get": {
         "summary": "Listar transferências",
+        "security": [{ "bearerAuth": [] }],
         "responses": {
           "200": { "description": "Lista de transferências" }
         }
